--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -8,7 +8,8 @@ langgraph-cli[inmem]>=0.4.0
 langchain-mcp-adapters>=0.1.13
 langchain-groq>=1.0.1
 langsmith>=0.4.46
-chromadb
-pypdf
-sentence-transformers
-langchain-huggingface
+chromadb>=1.3.5
+pypdf>=6.3.0
+sentence-transformers>=5.1.2
+langchain-huggingface>=1.0.1
+langchain-ollama>=1.0.0
