--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,6 +1,6 @@
 langgraph>=1.0.0
 langchain>=1.0.0
-langchain-openai>=1.0.0
+#langchain-openai>=1.0.0
 langchain-anthropic>=1.0.0
 langchain-community>=0.4.0
 jupyter>=1.0.0
@@ -13,3 +13,4 @@ pypdf>=6.3.0
 sentence-transformers>=5.1.2
 langchain-huggingface>=1.0.1
 langchain-ollama>=1.0.0
+langchain-google-genai>=3.1.0
